--- a/about.qmd
+++ b/about.qmd
@@ -4,8 +4,7 @@ title: "About"
 
 ## More About Me
 
-I'm a self-taught coder who works primarily in R on a daily basis, but I've also branched out to a few other languages and tools. I've got a particular interest in applying a deeper understanding of statistics to laboratory experiments, understanding how epigenetics regulates gene expression, and using data visualization techniques for genomic data.
-
+I'm a self-taught coder who works primarily in R on a daily basis, but I've also branched out to a few other languages and tools sucha as Python and JavaScript. I've got a particular interest in applying a deeper understanding of statistics to large sequencing data sets & laboratory experiments, understanding how epigenetics regulates gene expression, and using data visualization techniques for genomic data.
 
 ### My focus areas include:
 
@@ -23,5 +22,8 @@ I'm a self-taught coder who works primarily in R on a daily basis, but I've also
 
 -   Epigenetics
 
--   Autoimmune disease and B cell tolerance mechanisms
+-   Autoimmune disease and B cell tolerance mechanisms domain knowledge
 
+### Resume
+
+[See my resume](resume.pdf)
