--- a/Teaching.qmd
+++ b/Teaching.qmd
@@ -3,10 +3,18 @@ title: "Teaching"
 format:
   html:
     link-external-newwindow: true
+listing:
+  - id: presentations
+    contents: presentations
+    type: grid
+    max-items: 8
+    grid-columns: 2
 ---
 
 ## IBS 519: Statistical Rigor, Reproducibility
 
-* [Introduction to Data Viz](./presentations/IntroDataViz.qmd)
+I've had the pleasure to help teach a course for several years now at Emory aimed at introducing new graduate students to R programming, statistics, and reproducibility concepts. Below are some of the materials I've created!
 
-* [Using ggplot2](./presentations/ggplot2Intro.qmd)
+:::{#landing-posts}
+
+:::
