--- a/index.qmd
+++ b/index.qmd
@@ -25,8 +25,7 @@ about:
       href: mailto:jrrose5@emory.edu
 ---
 
-::: {.column-page}
-
+::: column-page
 ## About Me
 
 Hello! I'm a PhD candidate at Emory University studying Genetics & Molecular biology. I work on autoimmunity and gene regulation of the immune system using the tools of computational biology.
@@ -40,5 +39,4 @@ I plan to use this site to host my contact/CV information, teaching materials fo
 ## Resume
 
 [See my resume](resume.pdf)
-
 :::
